# addons

./: .devcontainer.json  README.md  renovate.json  repository.yaml
.github/scripts/: update-isponsorblocktv.sh  update-zititunneller.sh
.github/workflows/: builder.yaml  lint.yaml
isponsorblocktv/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  apparmor.txt  build.yaml  config.yaml
isponsorblocktv/rootfs/etc/s6-overlay/s6-rc.d/isponsorblocktv/: finish  run
isponsorblocktv/rootfs/etc/services.d/isponsorblocktv/: finish  run
isponsorblocktv/translations/: de.yaml  en.yaml  es.yaml  fr.yaml  ro.yaml
matrix-ng/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  apparmor.txt  build.yaml  config.yaml  ingress.conf
matrix-ng/element/src/: healthcheck.rs  main.rs  server.rs
matrix-ng/rootfs/etc/s6-overlay/s6-rc.d/bridge-heisenbridge/: finish  run
matrix-ng/web/: Cargo.toml  E95B7699E80B68A9EAD9A19A2BAA9B8552BD9047.key  rustfmt.toml
whosatmyfeeder/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  apparmor.txt  build.yaml  config.yaml  ingress.conf
whosatmyfeeder/rootfs/etc/nginx/sites-available/: default
whosatmyfeeder/rootfs/etc/services.d/mqttclient/: finish  run
whosatmyfeeder/rootfs/etc/services.d/nginx/: finish  run
whosatmyfeeder/rootfs/etc/services.d/whosatmyfeeder/: finish  run
zititunneller/: CHANGELOG.md  DOCS.md  Dockerfile  build.yaml  config.yaml
zititunneller/rootfs/etc/cont-init.d/: ziti-edge-tunnel.sh
zititunneller/rootfs/etc/services.d/ziti-edge-tunnel/: finish  run
zititunneller/translations/: en.yaml
(+21 files in other folders)
