# -*- eval: (cargo-minor-mode 1)

[package]
name = "element"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
attohttpc = { version = "0.25", default-features = false }
gotham = { version = "0.7", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
opt-level = "z"